--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./css/style.css">
+  <!-- font awesome cdn -->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css"
     integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -23,6 +25,9 @@
       <li class="navitem">Portfolio</li>
       <li class="navitem">Contact </li>
     </ul>
+    <div class="menu-icon">
+      <i class="fas fa-bars"></i>
+    </div>
   </nav>
   <div class="left-side">
     <img class="image-left" src="./assets-14/pexels-rfstudio-3819572.jpg" alt="rfstudio">
@@ -34,7 +39,7 @@
         <h1 class="lower">tivity.</h1>
       </div>
       <p>is our<br>ingredient.</p>
-      <ul class="social-icon">
+      <ul class="social-icon hidden">
         <li><img src="./assets-14/Twitter Icon.svg " alt="twitter" srcset=""></li>
         <li><img src="./assets-14/Instagram Icon.svg" alt="insta" srcset="  "></li>
         <li><img src="./assets-14/Facebook Icon.svg" alt="fb" srcset=""></li>
@@ -43,8 +48,8 @@
     </div>
     <button class="btn">check our package</button>
     <div class="right-side-lower">
-      <div class="dotline"></div>
-      <ul class="category">
+      <div class="dotline hidden"></div>
+      <ul class="category hidden">
         <li>
           <div class="dot activedot"></div>photography
         </li>
@@ -68,7 +73,7 @@
         <img class="bottom-image" src="./assets-14/pexels-cottonbro-7974875.jpg" alt="" srcset="">
       </div>
 
-      <div class="downarrow">
+      <div class="downarrow hidden">
         <div class="arrow-line"></div>
         <i class="fa-solid fa-angle-down"></i>
       </div>
